# problem-resolver

./: .deepsource.toml  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
backend/: .env  Cargo.toml  db.go  gentool.yaml  go.mod  go.sum  index.js  logger.go  main.go  package.json  pnpm-lock.yaml  utils.js
backend/databases/models/: problem.js  user.js
backend/db/: db.go  redis.go
backend/db/migrations/: 000001_create_users_table.up.sql  000002_create_user_codes_table.up.sql  000003_create_problems_table.up.sql  000004_create_users_table.down.sql  000004_create_users_table.up.sql  000005_create_users_table.down.sql  000005_create_users_table.up.sql  000006_create_problems_table.down.sql  000006_create_problems_table.up.sql  000007_create_problems_table.down.sql  000007_create_problems_table.up.sql  000008_create_problems_table.down.sql  000008_create_problems_table.up.sql  000009_create_problems_table.down.sql  000009_create_problems_table.up.sql  000010_create_problems_table.down.sql  000010_create_problems_table.up.sql  000011_create_problem_types_table.up.sql  000012_create_problems_table.down.sql  000012_create_problems_table.up.sql  000013_create_users_table.down.sql  000013_create_users_table.up.sql  (+23 more)
backend/mail/: mail.go
backend/models/: problem.go  user.go
backend/routes/: login.go  problem.go  problem.js  route.go  user.go  user.js
backend/scripts/: create_migrate.sh  migrate.sh
backend/src/: common.rs  mail.rs  main.rs  utils.rs
backend/templates/: base.html
backend/utils/: db.go  short_token.go  token.go
frontend/: .env  (+6 more)
(+124 files in other folders)
