[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
mongodb = "2.0.0"
lettre = "0.10"
tera = "1"
